--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: trace.package
 Title: Trace use of a package's functions
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
-    person("Max", "Sutton", , "first.last@example.com", role = c("aut", "cre"))
-Description: This traces where a package's functions are used and how long each call to those functions takes.
+    person("Max", "Sutton", , "maxwell.sutton@outlook.com", 
+    role = c("aut", "cre"))
+Description: This traces where a package's functions are used and how long each 
+    call to those functions takes.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
