--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+URL: https://github.com/maxsutton/trace.package
+BugReports: https://github.com/maxsutton/trace.package/issues
 Imports: 
     crayon,
     dplyr,
