--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: trace.package
-Title: Trace use of a package's functions
+Title: Trace Use of a Package's Functions
 Version: 0.1.0
 Authors@R: 
     person("Max", "Sutton", , "maxwell.sutton@outlook.com", 
     role = c("aut", "cre"))
-Description: This traces where a package's functions are used and how long each 
-    call to those functions takes.
+Description: Trace where a package's functions are used and how long each 
+    call to those functions takes. Then easily analyse those traces.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
